--- a/views/default/header.html
+++ b/views/default/header.html
@@ -87,7 +87,7 @@
                     {{args = request.function}}
                 {{pass}}
                 <li><a href='{{=URL(f="user",args="profile",vars={"_next":args})}}' alt='{{=T("Profile")}}' title='{{=T("Profile")}}'><i class="icon-user"></i></a></li>
-                <li><a href='{{=URL(f="user",args="logout",vars={"_next":"index"})}}' alt='{{=T("Logout")}}' title='{{=T("Logout")}}'><i class="icon-logout-custom"></i></a></li>
+                <li><a href='{{=URL(f="user",args="logout")}}' alt='{{=T("Logout")}}' title='{{=T("Logout")}}'><i class="icon-logout-custom"></i></a></li>
             </ul>
         </div>
     {{ pass }}
