--- a/views/default/index.html
+++ b/views/default/index.html
@@ -97,9 +97,13 @@
                       {{ form.elements('#auth_user_password')[0] ['_required'] = "required" }}
                       {{=form.custom.widget.password}}
                     </li>
-                    <li><input type="checkbox"><small>{{=T("Remember me (for 30 days)")}}</small></li>
-                    <li><a href="{{=URL(f='user',args='request_reset_password')}}">{{=T("Lost password?")}}</a></li>
-                    <li><input class="scrumforme-button-success" type="submit" id="sign-in" value='{{=T("Sign in")}}'></li>
+
+                    <li>{{=form.custom.widget.remember_me}}<small> {{=T("Remember me (for 30 days)")}}</small></li>
+                    <div class="menu_login--links">
+                        <li class="link"><a class="link-color" href="{{=URL(f='user',args='request_reset_password')}}">{{=T("Lost password?")}}</a></li>
+                        <li class="link"><input class="scrumforme-button-success" type="submit" id="sign-in" value='{{=T("Sign in")}}'></li>
+                    </div>
+                    <div style="clear:both"></div>
                   </ul>
                   {{=form.custom.end}}
                 </div>
