implements password recovery screens

--- a/views/default/user.html
+++ b/views/default/user.html
@@ -48,6 +48,7 @@
   <link rel="stylesheet" href='{{=URL("static","css/font-awesome.css")}}' />
 
   <link rel="stylesheet" href='{{=URL("static","css/user.css")}}' />
+  <link rel="stylesheet" href='{{=URL("static","css/home-syle.css")}}' />
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic' rel='stylesheet' type='text/css'>
 
@@ -89,7 +90,6 @@
                         </div>
                         <div class="signin">
                             <div class="social_sign">
-                                <a><i class="icon-key"></i></a>
                             </div>
                             <p class="sign_title">{{=T("Enter your e-mail address. You will receive a link to create a new password via email.")}}</p>
 
@@ -100,9 +100,6 @@
                             <h1>{{=T("Change password")}}</h1>
                         </div>
                         <div class="signin">
-                            <div class="social_sign">
-                                <a><i class="icon-key"></i></a>
-                            </div>
                             <br>
 
                             {{=form}}
@@ -112,9 +109,6 @@
                             <h1>{{=T("Reset password")}}</h1>
                         </div>
                         <div class="signin">
-                            <div class="social_sign">
-                                <a><i class="icon-key"></i></a>
-                            </div>
                             <br>
 
                             {{=form}}
