--- a/static/css/user.css
+++ b/static/css/user.css
@@ -8,7 +8,7 @@ body {
   color: #333333;
   background-color: #f3f3f3;
   -webkit-font-smoothing: antialiased;
-  background: url(../img/wild_oliva_light.png);
+  background-color: #34abbd;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -18,6 +18,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 20px;
   color: inherit;
   text-rendering: optimizelegibility;
+  font-family: 'Helvetica', cursive;
+  color: #197a8b;
+  font-size: 20px;
+  text-align: center;
 }
 
 .error {
@@ -173,6 +177,25 @@ p.sign_title {
   left: 0;
   top: -3px;
 }
+
+input[type="text"] , input[type="email"] , input[type="password"]{
+	background-color: #a8d9e0;
+	height: 20px;
+	width: 70%;
+}
+
+input[type='submit'] {
+    padding: .5em 2em;
+	font-size: 14px;
+	background-color: #197a8b;
+	color: #0b5b69;
+	cursor: pointer;
+    font-size: 14px;
+	background-color: #197a8b;
+	color: #FFF;
+	cursor: pointer;
+}
+
 .signup form .btn {
   margin-top: 50px;
 }
