--- a/views/default/user.html
+++ b/views/default/user.html
@@ -48,6 +48,7 @@
   <link rel="stylesheet" href='{{=URL("static","css/font-awesome.css")}}' />
 
   <link rel="stylesheet" href='{{=URL("static","css/user.css")}}' />
+  <link rel="stylesheet" href='{{=URL("static","css/tela-login-registro.css")}}' />
   <link rel="stylesheet" href='{{=URL("static","css/home-syle.css")}}' />
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic' rel='stylesheet' type='text/css'>
@@ -93,7 +94,13 @@
                             </div>
                             <p class="sign_title">{{=T("Enter your e-mail address. You will receive a link to create a new password via email.")}}</p>
 
-                            {{=form}}
+                            {{=form.custom.begin}}
+                                {{form.custom.widget.email['_placeholder'] = 'E-mail'}}
+                                {{form.custom.widget.email['_class'] = 'scrumforme-button-success'}}
+                                {{=form.custom.widget.email}}
+
+                                <input class="scrumforme-button-success" type="submit" value='{{=T("Request reset password")}}'>
+                            {{=form.custom.end}}
                         </div>
                     {{elif request.args(0)=='change_password':}}
                         <div class="hgroup">
