implements logo and style of the titles of the page to request password reset

--- a/views/default/user.html
+++ b/views/default/user.html
@@ -70,6 +70,9 @@
         <div class="container">
             <div class="span6 offset3">
                 <div class="row">
+                    <h1><img src="{{=URL('static', 'img/scrumfor-me.png')}}" alt="" /></h1>
+                </div>
+                <div class="row">
                     {{if request.args(0)=='profile':}}
                         <div class="hgroup">
                             <h1>{{=T("Profile")}}</h1>
