--- a/static/css/user.css
+++ b/static/css/user.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
   color: inherit;
   text-rendering: optimizelegibility;
   font-family: 'Helvetica', cursive;
-  color: #197a8b;
+  color: #FFF;
   font-size: 20px;
   text-align: center;
 }
