BUGFIX: size logo in px

--- a/views/reset_password.html
+++ b/views/reset_password.html
@@ -5,7 +5,7 @@
     <body style='font-family: Arial;'>
         <div style='width: 600px; height: 250px; margin:0 auto; background-color: #F9FBFC; border-bottom:solid 10px #34abbd;'>
             <div style='background-color:#34abbd;'>
-                <a href="http://www.scrumfor.me/" target="_blank" title="Scrumforme" alt="Scrumforme"><img style='width: 30%; padding-top: 22px;padding: 20px;float:left' title="Scrumforme" alt="Scrumforme" src={{="http://"+request.env.http_host+URL("static", "img/scrumfor-me.png")}}></a>
+                <a href="http://www.scrumfor.me/" target="_blank" title="Scrumforme" alt="Scrumforme"><img style='width: 200px; padding-top: 22px;padding: 20px;float:left' title="Scrumforme" alt="Scrumforme" src={{="http://"+request.env.http_host+URL("static", "img/scrumfor-me.png")}}></a>
                 <div style='clear:both'></div>
             </div>
             <div style='width: 550px;margin:20px;font-size: 16px;line-height: 20px;'>
