implements text of the home

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -69,8 +69,10 @@
     <div>
       <header>
         <div id="texto-logo"><a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'><h1><p><img src='{{=URL("static","img/scrumfor-me.png")}}'></p></h1></a>
-            <p>{{=T("THE SCRUMFORME MEANT TO BE EASY, ORGANIZED AND ACCESSIBLE.")}}</p><br>
-            <p>{{=T("INSPIRED BY AGILE METHODOLOGY USING SCRUM AND KANBAN SIMPLIFYING TEAMWORK.")}}</p>
+            <p>{{=T("Use Scrum in an easy and organized way.")}}</p><br>
+            <p>{{=T("Ideal for startups, communities, and corporate teams.")}}</p>
+            <p>{{=T("Use the power of Scrum and agile methods, in all simplicity.")}}</p>
+
         </div>
 
         {{ if not auth.is_logged_in(): }}
