correct spacing in the text of home

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -70,7 +70,7 @@
       <header>
         <div id="texto-logo"><a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'><h1><p><img src='{{=URL("static","img/scrumfor-me.png")}}'></p></h1></a>
             <p>{{=T("Use Scrum in an easy and organized way.")}}</p><br>
-            <p>{{=T("Ideal for startups, communities, and corporate teams.")}}</p>
+            <p>{{=T("Ideal for startups, communities, and corporate teams.")}}</p><br>
             <p>{{=T("Use the power of Scrum and agile methods, in all simplicity.")}}</p>
 
         </div>
