implements new layout in page 'Check you email'

--- a/views/default/check_your_email.html
+++ b/views/default/check_your_email.html
@@ -48,6 +48,8 @@
   <link rel="stylesheet" href='{{=URL("static","css/font-awesome.css")}}' />
 
   <link rel="stylesheet" href='{{=URL("static","css/user.css")}}' />
+  <link rel="stylesheet" href='{{=URL("static","css/tela-login-registro.css")}}' />
+  <link rel="stylesheet" href='{{=URL("static","css/home-syle.css")}}' />
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic' rel='stylesheet' type='text/css'>
 
@@ -63,11 +65,10 @@
     <div class="container">
         <div class="span6 offset3">
             <div class="row">
+                <h1><a href="{{=URL('index')}}"><img src="{{=URL('static', 'img/scrumfor-me.png')}}" alt="" /></a></h1>
+            </div>
+            <div class="row">
                 <div class="signin">
-                    <div class="social_sign">
-                        <a><i class="icon-envelope-alt"></i></a>
-                    </div>
-
                     <p class="sign_title">{{=T("Confirm your registration in scrumforme. You will receive a link to activate your account via email.")}}</p>
                 </div>
             </div>
