visiting card directly via url & change comments

--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -58,6 +58,11 @@
         <link rel="stylesheet" href='{{=URL("static","css/floatfixed.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/board.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
+        {{ elif request.function == "card": }}
+        <link rel="stylesheet" href='{{=URL("static","css/datepicker.css")}}' />
+        <link rel="stylesheet" href='{{=URL("static","css/floatfixed.css")}}' />
+        <link rel="stylesheet" href='{{=URL("static","css/board.css")}}' />
+        <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
         {{ elif request.function == "statistics": }}
         <link rel="stylesheet" href='{{=URL("static","css/statistics.css")}}' />
         {{ elif request.function == "team": }}
@@ -158,6 +163,17 @@
             <script src='{{=URL("static","js/product_backlog.js")}}'></script>
             <script src="{{=URL('static','js/jquery.ajax-awesome-cropper.js')}}"></script>
             {{ elif request.function == "board": }}
+            <script src='{{=URL("static","js/board.js")}}'></script>
+            <script src='{{=URL("static","js/board-editable.js")}}'></script>
+            <script src='{{=URL("static","js/board-card.js")}}'></script>
+            <script src='{{=URL("static","js/board-modal.js")}}'></script>
+            <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
+            <script src='{{=URL("static","js/board-livesearch.js")}}'></script>
+            <script src='{{=URL("static","js/floatfixed.js")}}'></script>
+            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+
+            {{ elif request.function == "card": }}
+            {{print 'oi'}}
             <script src='{{=URL("static","js/board.js")}}'></script>
             <script src='{{=URL("static","js/board-editable.js")}}'></script>
             <script src='{{=URL("static","js/board-card.js")}}'></script>
