--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -173,15 +173,27 @@
             <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
 
             {{ elif request.function == "card": }}
-            {{print 'oi'}}
+            <script src='{{=URL("static","js/jquery-2.0.0.min.js")}}'></script>
+            <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
             <script src='{{=URL("static","js/board.js")}}'></script>
             <script src='{{=URL("static","js/board-editable.js")}}'></script>
             <script src='{{=URL("static","js/board-card.js")}}'></script>
-            <script src='{{=URL("static","js/board-modal.js")}}'></script>
+            <script src='{{=URL("static","js/card-modal.js")}}'></script>
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script src='{{=URL("static","js/board-livesearch.js")}}'></script>
             <script src='{{=URL("static","js/floatfixed.js")}}'></script>
             <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+
+            <script type="text/javascript">
+                $('#card_modal').modal();
+
+                $('#card_modal').on('hidden', function () {
+                  alert('ir para pagina da historia');
+
+                // ao abrir o cartão pelo board diretamente
+                //   window.history.pushState("", "", '/url-cartao');
+                })
+            </script>
 
             {{ elif request.function == "projects": }}
             <script async defer src='{{=URL("static","js/delete_project.js")}}'></script>
