--- a/views/default/card.html
+++ b/views/default/card.html
@@ -13,6 +13,7 @@ var url = {
     card_new_comment_or_update : '{{=URL(r=request,f="call",args=["json","_card_new_comment_or_update"])}}',
     card_delete_comment : '{{=URL(r=request,f="call",args=["json","_card_delete_comment"])}}',
     update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
+    board_page : "{{=URL('board')}}",
 },
 msg = {
     field_empty : '{{=T("Click to write")}}',
