change layout of the

--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -52,7 +52,7 @@
                 <div class="span5">
                     <h4>{{=sprint.name}}</h4>
                     <h5 class='pull-left sprint-story-points'><span id="total-story-points">{{=sprint.story_points}}</span> {{=T('Story Points')}}</h5>
-                    <h5 class='pull-left sprint-story-points'>Restam <span id="story-points-remaining">10</span> {{=T('Story Points')}}</h5>
+                    <h5 class='pull-left sprint-story-points'><span id="story-points-remaining">10</span> {{=T('Remaining Points')}}</h5> 
                 </div>
                 <div class="span7">
                     <h5 class='pull-left'><span>{{=sprint.weeks}}</span> {{=T('Weeks')}}</h5>
