--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -11,6 +11,7 @@
             type_error : 'error',
             type_success : 'success',
             move_sprint_error : '{{=T("Before moving a story to sprint, you must create a sprint!")}}',
+            number_story_points_exceeded: '{{=T("Number of story points is being exceeded")}}',
         },
         url = {
             create_or_update_itens : '{{=URL(r=request,f="call",args=["json","create_or_update_itens"])}}',
@@ -52,7 +53,7 @@
                 <div class="span5">
                     <h4>{{=sprint.name}}</h4>
                     <h5 class='pull-left sprint-story-points'><span id="total-story-points">{{=sprint.story_points}}</span> {{=T('Story Points')}}</h5>
-                    <h5 class='pull-left sprint-story-points'><span id="story-points-remaining">10</span> {{=T('Remaining Points')}}</h5> 
+                    <h5 class='pull-left sprint-story-points'><span id="story-points-remaining">10</span> {{=T('Remaining Points')}}</h5>
                 </div>
                 <div class="span7">
                     <h5 class='pull-left'><span>{{=sprint.weeks}}</span> {{=T('Weeks')}}</h5>
