The story needs to story points to go sprint

--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -11,6 +11,7 @@
             type_error : 'error',
             type_success : 'success',
             move_sprint_error : '{{=T("Before moving a story to sprint, you must create a sprint!")}}',
+            need_story_points : '{{=T("The story needs to story points")}}',
             number_story_points_exceeded: '{{=T("Number of story points is being exceeded")}}',
         },
         url = {
