--- a/static/css/product_backlog.css
+++ b/static/css/product_backlog.css
@@ -83,10 +83,14 @@ margin-top: 0px;
     margin-left: 20px;
 }
 
-#sprint_info h5 span {
+#sprint_info .border-num {
     padding: 6px;
     border: 2px solid #ccc;
     border-radius: 5px;
+}
+
+#sprint_info .story-points-num {
+    display: inline-block;
 }
 
 #sprint_info .sprint-story-points {
