implements flag beta in home

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -68,7 +68,19 @@
     <a href="https://github.com/kolaborativa/scrumforme" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
     <div>
       <header>
-        <div id="texto-logo"><a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'><h1><p><img src='{{=URL("static","img/scrumfor-me.png")}}'></p></h1></a>
+        <div id="texto-logo">
+            <a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'>
+                <h1>
+                    <p>
+                        <img style="width: 80%" src='{{=URL("static","img/scrumfor-me.png")}}'>
+                        <!-- <img style="width: 10%"  src="http://www.lehman.edu/library/images/beta.png" alt="" /> -->
+                        <img style="width: 10%"  src="http://www.powermyanalytics.com/images/beta.png" alt="" />
+                        <!-- <img style="width: 10%"  src="http://www.monyta.com/img/beta.png" alt="" />
+                        <img style="width: 10%"  src="http://mgt.guc.edu.eg/Media/Images/General/beta_blue.png.ashx" alt="" /> -->
+                    </p>
+                </h1>
+            </a>
+
             <p>{{=T("Use Scrum in an easy and organized way.")}}</p><br>
             <p>{{=T("Ideal for startups, communities, and corporate teams.")}}</p><br>
             <p>{{=T("Use the power of Scrum and agile methods, in all simplicity.")}}</p>
