--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -172,6 +172,10 @@
             <script src='{{=URL("static","js/floatfixed.js")}}'></script>
             <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
 
+            {{ elif request.function == 'brainstorm': }}
+            <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+            <script src='{{=URL("static","js/brainstorm.js")}}'></script>
+
             {{ elif request.function == "card": }}
             <script src='{{=URL("static","js/jquery-2.0.0.min.js")}}'></script>
             <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
