--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -71,6 +71,8 @@
         {{ elif request.function == "sprints": }}
         <link rel="stylesheet" href='{{=URL("static","css/sprints.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
+        {{ elif request.function == 'brainstorm': }}
+        <link rel="stylesheet" href="{{=URL('static', 'css/brainstorm.css')}}">
         {{pass}}
 
         {{ if not request.function == "projects": }}
