creates dynamically note if the recording in the database is successful

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -5,19 +5,9 @@
     var url = {
       create_note : '{{=URL("_create_note")}}'
     },
-//    msg = {
-//        field_empty : '{{=T("Click to write")}}',
-//        validation_error : '{{=T("Can not be empty")}}',
-//        confirm : '{{=T("Are you sure you want to continue?")}}',
-//        task_undated : '{{=T("You must first put a start date or move to IN PROGRESS column")}}',
-//        task_no_belong : '{{=T("This task does not belong to another definition of ready")}}',
-//        remove_sucess : '{{=T("Removed Successfully!")}}',
-//        remove_error : '{{=T("Error in removal!")}}',
-//        no_role : '{{=T("Some members of the team are without a paper, go TEAM PAGE and add their respective roles.")}}',
-//        no_team : '{{=T("There are not members on the team, go TEAM PAGE and add new members.")}}',
-//        task_no_exist : '{{=T("first insert the card content.")}}',
-//        card_assign : '{{=T("Assign this card to a member of team before moving it")}}',
-//    },
+    msg = {
+        note_default_text : '{{=T("Your text")}}',
+    },
 //    txt = {
 //        team_page : '{{=T("Team Page")}}',
 //        started_in : '{{=T("Started in")}}',
