restricted area of drag in drop in the brainstorm page

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -32,7 +32,7 @@
 
 </script>
 
-<div class="container-fluid">
+<div id="area-brainstorm" class="container-fluid">
     <div class="row-fluid">
         <div class="span5">
             {{if 'brainstorm_notes' in globals():}}
